# agent_simulation

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
configs/: base.yaml
configs/runs/: calendar_high.yaml  calendar_low.yaml  calendar_moderate.yaml  classify_based_on_read_emails.yaml  coding_task.yaml  email_summary.yaml  email_triage.yaml  list_emails_in_sheet.yaml  wartime_stocks_presentation.yaml  web_research.yaml  weekly_digest.yaml
scripts/: run_agent.py
small_agent/: logging.py  registry.py
small_agent/agents/: base.py  react.py
small_agent/backends/: base.py  lmstudio.py
small_agent/config/: schemas.py
small_agent/core/: types.py
small_agent/critics/: base.py  llm_critic.py
small_agent/pipeline/: agent_pipeline.py
small_agent/tools/: base.py  clarify.py  gmail.py  google_calendar.py  google_docs.py  google_sheets.py  python_sandbox.py  tavily.py  web_fetch.py
